[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://dock.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Dock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 530.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 52, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 205.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 52, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 310.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 52, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 415.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 52, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 419.0
margin_right = 520.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 52, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Button5"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Button3" to="." method="_on_Button3_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Button4" to="." method="_on_Button4_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Button4" to="." method="_on_Button4_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Button5" to="." method="_on_Button5_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Button5" to="." method="_on_Button5_mouse_exited"]
